--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A sky-blue themed, SEO-friendly static blog inspired by Medium." />
-    <meta name="keywords" content="blog, medium style, tailwind, sky blue, responsive, seo" />
-    <meta name="author" content="Your Name" />
-    <title>My Medium-Style Blog</title>
+    <meta name="description" content="BlogsHub is your go-to platform for the latest articles on technology, sports, health, entertainment, and more." />
+    <meta name="keywords" content="blog, tech, sports, health, entertainment, lifestyle, responsive, SEO" />
+    <meta name="author" content="BlogsHub Team" />
+    <title>BlogsHub</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
