--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="author" content="BlogsHub Team" />
     <title>BlogsHub</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <meta http-equiv="refresh" content="0; url=https://www.blogshub.online/" />
+    <link rel="canonical" href="https://www.blogshub.online/" />
 </head>
 
 <body class="bg-sky-50 text-gray-800">
