--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="BlogsHub is your go-to platform for the latest articles on technology, sports, health, entertainment, and more." />
-    <meta name="keywords" content="blog, tech, sports, health, entertainment, lifestyle, responsive, SEO" />
+    <meta name="keywords" content="blog, blogshub, blogging sites, blogshub.online, tech, sports, health, entertainment, lifestyle, responsive, SEO" />
     <meta name="author" content="BlogsHub Team" />
     <title>BlogsHub</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
