update name with logo

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 <body class="bg-sky-50 text-gray-800">
 
     <!-- Navbar -->
-    <nav class="p-4 bg-black text-white border-b border-black">
+    <nav class="p-4 bg-blue-100 text-white border-b border-black">
         <div class="flex items-center justify-between flex-wrap max-w-7xl mx-auto">
             <!-- Logo -->
             <div class="flex items-center flex-shrink-0 text-white mr-6">
-                <a href="index.html" class="text-2xl font-bold">Blogshub</a>
+                <a href="index.html" class="text-2xl font-bold">
+                    <img src="./logo.png" alt="logo" class="w-14 h-14" />
+                </a>
             </div>
 
             <!-- Search Bar -->
@@ -29,7 +31,7 @@
                     <input type="text" placeholder="Search..."
                         class="w-full max-w-[300px] px-4 py-2 pr-12 rounded-full text-black focus:outline-none" />
                     <button class="absolute right-2 top-1/2 transform -translate-y-1/2 text-black">
-                        🔍
+                        <i class="fa-solid fa-magnifying-glass"></i>
                     </button>
                 </div>
             </div>
