add google analytics api

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="BlogsHub is your go-to platform for the latest articles on technology, sports, health, entertainment, and more." />
-    <meta name="keywords" content="blog, blogshub, blogging sites, blogshub.online, tech, sports, health, entertainment, lifestyle, responsive, SEO" />
+    <meta name="description"
+        content="BlogsHub is your go-to platform for the latest articles on technology, sports, health, entertainment, and more." />
+    <meta name="keywords"
+        content="blog, blogshub, blogging sites, blogshub.online, tech, sports, health, entertainment, lifestyle, responsive, SEO" />
     <meta name="author" content="BlogsHub Team" />
     <title>BlogsHub</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -14,6 +16,16 @@
 </head>
 
 <body class="bg-sky-50 text-gray-800">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RWT6WMPL0R"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-RWT6WMPL0R');
+    </script>
 
     <!-- Navbar -->
     <nav class="p-4 bg-blue-100 text-white border-b border-black">
