added google analytics api

--- a/about.html
+++ b/about.html
@@ -6,6 +6,15 @@
     <title>About - My Blog</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   </head>
+  <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RWT6WMPL0R"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-RWT6WMPL0R');
+    </script>
   <body class="bg-gray-100 text-gray-900">
     <nav class="bg-white shadow p-4 flex justify-between items-center">
       <a href="index.html" class="text-xl font-bold">My Blog</a>
