--- a/index.html
+++ b/index.html
@@ -174,6 +174,10 @@
         }
     </script>
 
+    <!-- Footer placeholder -->
+    <div id="footer-placeholder"></div>
+
+    <script src="footer.js"></script>
 </body>
 
 </html>
