--- a/index.html
+++ b/index.html
@@ -174,10 +174,16 @@
         }
     </script>
 
+    <div class="pt-10 pb-16 bg-blue-100 px-4 border-t border-b border-gray-100">
+        <!-- Sign-In form placeholder -->
+        <div id="signin-placeholder"></div>
+    </div>
+
     <!-- Footer placeholder -->
     <div id="footer-placeholder"></div>
 
     <script src="footer.js"></script>
+    <script src="signin.js"></script>
 </body>
 
 </html>
