--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         content="blog, blogshub, blogging sites, blogshub.online, tech, sports, health, entertainment, lifestyle, responsive, SEO" />
     <meta name="author" content="BlogsHub Team" />
     <title>BlogsHub</title>
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="canonical" href="https://www.blogshub.online/" />
