--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   <div id="navbar-placeholder"></div>
 
   <!-- Page Header -->
-  <header class="bg-blue-700 py-12 text-center text-white">
+  <header class="bg-gray-700 py-12 text-center text-white">
     <h1 class="text-4xl font-bold">About BlogsHub</h1>
     <p class="mt-2 text-lg">Our mission, values, and the people behind the words.</p>
   </header>
