changed the colors

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -15,7 +15,7 @@
 
         gtag('config', 'G-RWT6WMPL0R');
     </script>
-  <body class="bg-gray-100 text-gray-900">
+  <body class="bg-gray-700 text-white">
     <nav class="bg-white shadow p-4 flex justify-between items-center">
       <a href="index.html" class="text-xl font-bold">My Blog</a>
       <div class="space-x-4">
