--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
     <!-- Main content -->
-    <main class="max-w-3xl mx-auto sm:p-4" id="main-content">
+    <main class="max-w-3x mx-auto sm:p-4" id="main-content">
         <!-- Blog list or single post injected here -->
     </main>
 
@@ -138,8 +138,13 @@
             const blog = blogs.find(b => b.id === postId);
             if (blog) {
                 document.title = blog.title + " | MyBlog";
+                // Add meta keywords dynamically
+                const metaKeywords = document.createElement("meta");
+                metaKeywords.name = "keywords";
+                metaKeywords.content = blog.keywords || "";
+                document.head.appendChild(metaKeywords);
                 contentDiv.innerHTML = `
-          <article class="bg-white border border-sky-200 px-6 pb-6 pt-2 mb-6 rounded-lg shadow">
+          <article class="bg-white w-full sm:px-10 md:px-16 lg:px-32 xl:px-40 px-6 pb-6 pt-2 mb-6 rounded-xl">
             <a href="index.html" class="inline-block text-blue-500 mb-2 hover:underline">← Back to all posts</a>
 
             <!-- BANNER IMAGE -->
@@ -162,17 +167,21 @@
             }
         } else {
             // List view
-            contentDiv.innerHTML = blogs.map(blog => `
-        <article class="bg-white border border-sky-200 p-4 sm:p-6 mb-6 sm:rounded-lg shadow hover:shadow-lg transition">
-          <img src="${blog.banner}" alt="Banner for ${blog.title}"
-                 class="w-full h-48 sm:h-60 object-cover rounded-lg mb-4" />
-            <h2 class="text-2xl font-bold mb-2">
-            <a href="?post=${blog.id}" class="hover:underline">${blog.title}</a>
-          </h2>
-          <p class="text-gray-700">${blog.content.replace(/<[^>]+>/g, '').slice(0, 150)}…</p>
-          <a href="?post=${blog.id}" class="inline-block mt-2 text-white bg-black rounded-full px-4 py-1 hover:underline">Read more →</a>
-        </article>
-      `).join("");
+           contentDiv.innerHTML = `
+                <div class="grid gap-6 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                    ${blogs.map(blog => `
+                    <article class="bg-white border border-sky-200 p-4 sm:p-6 rounded-lg shadow hover:shadow-lg transition">
+                        <img src="${blog.banner}" alt="Banner for ${blog.title}"
+                            class="w-full h-48 object-cover rounded-lg mb-4" />
+                        <h2 class="text-2xl font-bold mb-2">
+                        <a href="?post=${blog.id}" class="hover:underline">${blog.title}</a>
+                        </h2>
+                        <p class="text-gray-700">${blog.content.replace(/<[^>]+>/g, '').slice(0, 150)}…</p>
+                        <a href="?post=${blog.id}" class="inline-block mt-2 text-white bg-black rounded-full px-4 py-1 hover:underline">Read more →</a>
+                    </article>
+                    `).join("")}
+                </div>
+            `;
         }
     </script>
 
