--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="canonical" href="https://www.blogshub.online/" />
+    <!-- Load navbar after DOM loads -->
+    <script src="navbar.js" defer></script>
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -27,9 +29,6 @@
     </script>
 
 <body class="bg-sky-50 text-gray-800">
-
-    <!-- Navbar JS -->
-    <script src="navbar.js"></script>
     <div id="navbar-placeholder"></div>
 
     <script>
@@ -133,50 +132,66 @@
         const params = new URLSearchParams(window.location.search);
         const postId = params.get("post");
 
+        const setMetaTag = (name, content) => {
+            let meta = document.querySelector(`meta[name="${name}"]`);
+            if (!meta) {
+                meta = document.createElement("meta");
+                meta.name = name;
+                document.head.appendChild(meta);
+            }
+            meta.content = content;
+        };
+
         if (postId) {
-            // Single post view
             const blog = blogs.find(b => b.id === postId);
+
             if (blog) {
-                document.title = blog.title + " | MyBlog";
-                // Add meta keywords dynamically
-                const metaKeywords = document.createElement("meta");
-                metaKeywords.name = "keywords";
-                metaKeywords.content = blog.keywords || "";
-                document.head.appendChild(metaKeywords);
+                document.title = `${blog.title} | MyBlog`;
+
+                // SEO Meta Tags
+                setMetaTag("keywords", blog.keywords || blog.tags.join(", "));
+                setMetaTag("description", blog.description || blog.content.slice(0, 150));
+                setMetaTag("robots", "index, follow");
+
                 contentDiv.innerHTML = `
-          <article class="bg-white w-full sm:px-10 md:px-16 lg:px-32 xl:px-40 px-6 pb-6 pt-2 mb-6 rounded-xl">
-            <a href="index.html" class="inline-block text-blue-500 mb-2 hover:underline">← Back to all posts</a>
+                    <article class="bg-white w-full sm:px-10 md:px-16 lg:px-32 xl:px-40 px-6 pb-6 pt-2 mb-6 rounded-xl">
+                        <a href="index.html" class="inline-block text-blue-500 mb-2 hover:underline">← Back to all posts</a>
 
-            <!-- BANNER IMAGE -->
-            <img src="${blog.banner}" alt="Banner for ${blog.title}"
-                 class="w-full h-48 sm:h-full object-cover rounded-lg mb-4" />
+                        <img src="${blog.banner}" alt="Banner for ${blog.title}"
+                            class="w-full h-48 sm:h-full object-cover rounded-lg mb-4" />
 
-            <h1 class="text-3xl font-bold mb-2">${blog.title}</h1>
-            <time class="text-sm text-gray-500 block mb-3">${new Date(blog.date).toDateString()}</time>
-            <div class="mb-4 text-sm">
-              ${blog.tags.map(t => `<span class="inline-block bg-blue-500 text-white font-semibold px-2 py-1 rounded mr-2">${t}</span>`).join('')}
-            </div>
-            <hr class="my-4" />
+                        <h1 class="text-3xl font-bold mb-2">${blog.title}</h1>
+                        <time class="text-sm text-gray-500 block mb-3">${new Date(blog.date).toDateString()}</time>
+                        <div class="mb-4 text-sm">
+                            ${blog.tags.map(t => `<span class="inline-block bg-blue-500 text-white font-semibold px-2 py-1 rounded mr-2">${t}</span>`).join('')}
+                        </div>
+                        <hr class="my-4" />
 
-            <div class="prose max-w-none">${parseMarkdown(blog.content)}</div>
-            <a href="index.html" class="inline-block mt-6 text-sky-600 hover:underline">← Back to all posts</a>
-          </article>
-        `;
+                        <div class="prose max-w-none">${parseMarkdown(blog.content)}</div>
+                        <a href="index.html" class="inline-block mt-6 text-sky-600 hover:underline">← Back to all posts</a>
+                    </article>
+                `;
             } else {
+                document.title = "Post Not Found | MyBlog";
+                setMetaTag("robots", "noindex, nofollow");
+
                 contentDiv.innerHTML = "<p>Sorry, that post doesn’t exist.</p>";
             }
+
         } else {
-            // List view
-           contentDiv.innerHTML = `
+            document.title = "All Posts | MyBlog";
+            setMetaTag("robots", "index, follow");
+
+            contentDiv.innerHTML = `
                 <div class="grid gap-6 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
                     ${blogs.map(blog => `
                     <article class="bg-white border border-sky-200 p-4 sm:p-6 rounded-lg shadow hover:shadow-lg transition">
                         <img src="${blog.banner}" alt="Banner for ${blog.title}"
                             class="w-full h-48 object-cover rounded-lg mb-4" />
                         <h2 class="text-2xl font-bold mb-2">
-                        <a href="?post=${blog.id}" class="hover:underline">${blog.title}</a>
+                            <a href="?post=${blog.id}" class="hover:underline">${blog.title}</a>
                         </h2>
-                        <p class="text-gray-700">${blog.content.replace(/<[^>]+>/g, '').slice(0, 150)}…</p>
+                        <p class="text-gray-700">${blog.description || blog.content.replace(/<[^>]+>/g, '').slice(0, 150)}…</p>
                         <a href="?post=${blog.id}" class="inline-block mt-2 text-white bg-black rounded-full px-4 py-1 hover:underline">Read more →</a>
                     </article>
                     `).join("")}
@@ -193,7 +208,7 @@
     <!-- Footer placeholder -->
     <div id="footer-placeholder"></div>
 
-    <script src="footer.js"></script>
+    <script src="footer.js" defer></script>
     <script src="signin.js"></script>
 </body>
 
