--- a/article.html
+++ b/article.html
@@ -9,6 +9,8 @@
   <meta name="author" content="BlogsHub Team" />
   <link rel="icon" type="image/x-icon" href="./favicon.ico" />
   <title>Article | BlogsHub</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8833008865372719"
+     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="canonical" href="" />
